Allows ConcreteSInt(1,1) to be created, this happens in rocket Lots of stuff to show possible combinational loop in rocket